<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/item_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/wallet_query_all"
            style="@style/text_15_s_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/account_tab1"
            android:gravity="center"
            android:text="@string/wallet_query_all" />

        <TextView
            android:id="@+id/wallet_query_recharge"
            style="@style/text_15_s_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/account_tab2"
            android:gravity="center"
            android:text="@string/wallet_query_recharge" />

        <TextView
            android:id="@+id/wallet_query_redeem"
            style="@style/text_15_s_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/account_tab3"
            android:gravity="center"
            android:text="@string/wallet_query_redeem" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_account_list_title"
        android:gravity="center_vertical">

        <TextView
            style="@style/text_14_s_g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wallet_query_name" />

        <TextView
            style="@style/text_14_s_g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wallet_query_amount" />

        <TextView
            style="@style/text_14_s_g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wallet_query_state" />

    </LinearLayout>

    <ListView
        android:id="@+id/wallet_query_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
