<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/bg_wallet_profit_rate"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/wallet_infopanel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/text_15_s_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wallet_available_balance"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wallet_available_balance"
                style="@style/text_15_s_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/wallet_unsignin_prompt"
            style="@style/text_15_s_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/wallet_unsignin_prompt"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wallet_sevenday_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/txt_red"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wallet_time"
                style="@style/text_15_s_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                style="@style/text_15_s_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wallet_sev"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wallet_charge"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_wallet_recharge"
        android:orientation="vertical"
        android:paddingLeft="70dp">

        <TextView
            android:id="@+id/textView3"
            style="@style/text_15_s_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/wallet_charge" />

        <TextView
            android:id="@+id/channel_tv_id"
            style="@style/text_13_s_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/wallet_charge_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wallet_fast_cash"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_wallet_fast_cash"
        android:orientation="vertical"
        android:paddingLeft="70dp">

        <TextView
            android:id="@+id/TextView3"
            style="@style/text_15_s_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/wallet_fast_cash" />

        <TextView
            android:id="@+id/TextView01"
            style="@style/text_13_s_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/wallet_fast_cash_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wallet_query"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_wallet_query"
        android:orientation="vertical"
        android:paddingLeft="70dp">

        <TextView
            android:id="@+id/TextView07"
            style="@style/text_15_s_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/wallet_query" />

        <TextView
            android:id="@+id/TextView08"
            style="@style/text_13_s_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/wallet_query_description" />
    </LinearLayout>

</LinearLayout>