<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/item_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/size_2"
        android:paddingRight="@dimen/size_2"
        android:paddingTop="@dimen/size_2">

        <TextView
            android:id="@+id/account_indicator_capitals"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account_positions_query"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/account_indicator_profits"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account_gain_loss_query"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/account_indicator_trades"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account_transaction_query"
            android:textColor="@color/black" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/account_query_result_panel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>